crates/oxc_react_compiler/tests/snapshots/async-saved-object-member-safe-overwrite.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-saved-object-member-safe-overwrite.js
---
function Component() {
	let count = 0;
	const opts = { cb: () => count++ };
	const run = async () => {
		const saved = opts;
		await 0;
		saved.cb();
	};
	run();
	opts.cb = _temp;
	return null;
}
function _temp() {
	return null;
}
