crates/oxc_react_compiler/tests/snapshots/async-set-clear-foreach.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-set-clear-foreach.js
---
function Component() {
	let count = 0;
	const cb = () => count++;
	const callbacks = new Set([cb]);
	callbacks.clear();
	callbacks.forEach(_temp);
	return null;
}
async function _temp(value) {
	await 0;
	value();
}
