crates/oxc_react_compiler/tests/snapshots/async-sync-wrapper-empty-array.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-sync-wrapper-empty-array.js
---
function Component() {
	let count = 0;
	const run = _temp;
	[].forEach((value) => run(value));
	return null;
}
async function _temp(fn) {
	await 0;
	fn();
}
