crates/oxc_react_compiler/tests/snapshots/async-sync-wrapper-safe-capture.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-sync-wrapper-safe-capture.js
---
function Component() {
	let count = 0;
	const cb = () => count++;
	let selected = cb;
	const run = async () => {
		await 0;
		selected();
	};
	const start = () => run();
	start();
	selected = _temp;
	return null;
}
function _temp() {}
