crates/oxc_react_compiler/tests/snapshots/async-sync-wrapper-uncalled.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-sync-wrapper-uncalled.js
---
function Component() {
	let count = 0;
	return null;
}
