crates/oxc_react_compiler/tests/snapshots/async-tag-safe-returned-callable.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-tag-safe-returned-callable.js
---
function Component() {
	let count = 0;
	const mutate = () => count++;
	const tag = _temp;
	const run = tag`${_temp2}${async () => {
		await 0;
		mutate();
	}}`;
	run();
	return null;
}
async function _temp2() {
	return null;
}
function _temp(strings, safe) {
	return safe;
}
