crates/oxc_react_compiler/tests/snapshots/async-tag-unused-substitution.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-tag-unused-substitution.js
---
function Component() {
	let count = 0;
	const tag = _temp;
	tag`${_temp2}${() => count++}`;
	return null;
}
function _temp2() {
	return null;
}
async function _temp(strings, safe) {
	await 0;
	safe();
}
